# mec

./: .gitignore  pyproject.toml
conf/: cmd.py  cmd.toml  mec.py  mux.toml
mec/: __init__.py  cmd.py  llm.py  mrv.py  mux.py  reg.py  srv.py
